# code-evaluator

./: README.md  proposal.md  pyproject.toml
src/evaluator/: cli.py  models.py  scoring.py
src/evaluator/analyzers/: base.py  quality.py  security.py  structure.py  typing.py
src/evaluator/reporters/: base.py  executive.py  technical.py
src/evaluator/scanner/: base.py  github.py  local.py
tests/: conftest.py  test_local_scanner.py  test_models.py  test_reporters.py  test_scoring.py  test_structure.py
