[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "code-evaluator"
version = "0.1.0"
description = "Evaluador de calidad de código para proyectos Python/PySpark"
requires-python = ">=3.12"
dependencies = ["pyyaml>=6.0"]

[project.scripts]
evaluator = "evaluator.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
